Added ignite mode

--- a/www/index.html
+++ b/www/index.html
@@ -78,6 +78,7 @@
 								<option value="Start">Start</option>
 								<option value="Smoke">Smoke</option>
 								<option value="Hold">Hold</option>
+								<option value="Ignite">Ignite</option>
 								<option value="Shutdown">Shutdown</option>
 								
 							</select>
