Added manifest to add to homescreen

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 	<link href="css/layout.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/angular-toggle-switch-bootstrap-3.css" type="text/css" media="screen">
-
+	<link rel="manifest" href="manifest.json">
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
